--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
   %body{class: "#{controller_name} #{action_name}"}
     - analytics_scope do
       = render 'google_tag_manager'
-    .main-container.container
+    .main-container.container.js-campaign
       = render 'announcements'
       = render 'header'
       = render 'flash_messages', :flash => flash, :on_landing_page => false
