--- a/app/views/invitations/new.html.haml
+++ b/app/views/invitations/new.html.haml
@@ -15,7 +15,7 @@
   .row#invitation-options
     - if can? :invite_outsiders, @group
       .span6.invite-by-email
-        = render 'groups/invite_users', form: f, group: @group, discussion: @discussion
+        = render 'invite_users', form: f, group: @group, discussion: @discussion
         = @group.invitations_remaining
         = t :invitations_remaining
     - if @group.is_a_subgroup?
